# Admin-for-Bot

./: .gitignore  LICENSE  docker-compose.yml
backend/: .dockerignore  .env.dist  Dockerfile  Makefile  createsuperadmin.py  entrypoint.sh  pyproject.toml  settings.py
backend/admin/: main.py  superadmin.py
backend/admin/api/: dependencies.py  routers.py
backend/admin/api/actions/: auth.py  permissions.py
backend/admin/api/routes/admin_actions/: auth.py  info.py  utils.py
backend/admin/api/routes/user_actions/: info.py  utils.py
backend/bot/: main.py  services.py
backend/bot/handlers/: start.py
backend/bot/messages/: start_message.py
backend/bot/utils/: set_commands.py
backend/infrastructure/core/: database.py  redis.py
backend/infrastructure/models/: admin.py  base.py  user.py
backend/infrastructure/repositories/: base_repository.py  database_repository.py
backend/infrastructure/schemas/: admin_schemas.py  base_schema.py  user_schemas.py  utils_schemas.py
backend/infrastructure/services/: admin_service.py  bot_service.py  redis_service.py  user_service.py
backend/infrastructure/utils/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 542ca78ac973_.py  6485d00adb92_.py
